continuazione compliance sonarcloud (parziale) v2